cmake_minimum_required(VERSION 3.8)
project(ex4___limor)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        "ex4 client/src/AILogic.cpp"
        "ex4 client/src/AILogic.h"
        "ex4 client/src/AIPlayer.cpp"
        "ex4 client/src/AIPlayer.h"
        "ex4 client/src/Board.cpp"
        "ex4 client/src/Board.h"
        "ex4 client/src/Client.cpp"
        "ex4 client/src/Client.h"
        "ex4 client/src/DefaultLogic.cpp"
        "ex4 client/src/DefaultLogic.h"
        "ex4 client/src/GameFlow.cpp"
        "ex4 client/src/GameFlow.h"
        "ex4 client/src/GameLogic.cpp"
        "ex4 client/src/GameLogic.h"
        "ex4 client/src/HumanPlayer.cpp"
        "ex4 client/src/HumanPlayer.h"
        "ex4 client/src/main.cpp"
        "ex4 client/src/Player.cpp"
        "ex4 client/src/Player.h"
        "ex4 client/src/Print.h"
        "ex4 client/src/PrintConsole.cpp"
        "ex4 client/src/PrintConsole.h"
        "ex4 client/src/RemoteLogic.cpp"
        "ex4 client/src/RemoteLogic.h"
        "ex4 client/src/RemotePlayer.cpp"
        "ex4 client/src/RemotePlayer.h"
        "ex4 client/src/Square.cpp"
        "ex4 client/src/Square.h"
        "ex4 client (copy)/src/AILogic.cpp"
        "ex4 client (copy)/src/AILogic.h"
        "ex4 client (copy)/src/AIPlayer.cpp"
        "ex4 client (copy)/src/AIPlayer.h"
        "ex4 client (copy)/src/Board.cpp"
        "ex4 client (copy)/src/Board.h"
        "ex4 client (copy)/src/Client.cpp"
        "ex4 client (copy)/src/Client.h"
        "ex4 client (copy)/src/DefaultLogic.cpp"
        "ex4 client (copy)/src/DefaultLogic.h"
        "ex4 client (copy)/src/GameFlow.cpp"
        "ex4 client (copy)/src/GameFlow.h"
        "ex4 client (copy)/src/GameLogic.cpp"
        "ex4 client (copy)/src/GameLogic.h"
        "ex4 client (copy)/src/HumanPlayer.cpp"
        "ex4 client (copy)/src/HumanPlayer.h"
        "ex4 client (copy)/src/main.cpp"
        "ex4 client (copy)/src/Player.cpp"
        "ex4 client (copy)/src/Player.h"
        "ex4 client (copy)/src/Print.h"
        "ex4 client (copy)/src/PrintConsole.cpp"
        "ex4 client (copy)/src/PrintConsole.h"
        "ex4 client (copy)/src/RemoteLogic.cpp"
        "ex4 client (copy)/src/RemoteLogic.h"
        "ex4 client (copy)/src/RemotePlayer.cpp"
        "ex4 client (copy)/src/RemotePlayer.h"
        "ex4 client (copy)/src/Square.cpp"
        "ex4 client (copy)/src/Square.h"
        "ex4 server/src/main.cpp"
        "ex4 server/src/Server.cpp"
        "ex4 server/src/Server.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-generated-actions.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-matchers.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-port.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/internal/gmock-generated-internal-utils.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/internal/gmock-internal-utils.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/internal/gmock-port.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-actions.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-cardinalities.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-generated-actions.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-generated-function-mockers.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-generated-matchers.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-generated-nice-strict.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-matchers.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-more-actions.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-more-matchers.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock-spec-builders.h"
        "google tests for later use/lib/googletest-master/googlemock/include/gmock/gmock.h"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock-all.cc"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock-cardinalities.cc"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock-internal-utils.cc"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock-matchers.cc"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock-spec-builders.cc"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock.cc"
        "google tests for later use/lib/googletest-master/googlemock/src/gmock_main.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-actions_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-cardinalities_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-generated-actions_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-generated-function-mockers_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-generated-internal-utils_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-generated-matchers_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-internal-utils_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-matchers_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-more-actions_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-nice-strict_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-port_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock-spec-builders_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_all_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_ex_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_leak_test_.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_link2_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_link_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_link_test.h"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_output_test_.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_stress_test.cc"
        "google tests for later use/lib/googletest-master/googlemock/test/gmock_test.cc"
        "google tests for later use/lib/googletest-master/googletest/codegear/gtest_all.cc"
        "google tests for later use/lib/googletest-master/googletest/codegear/gtest_link.cc"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/custom/gtest-port.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/custom/gtest-printers.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/custom/gtest.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-death-test-internal.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-filepath.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-linked_ptr.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-param-util-generated.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-param-util.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-port-arch.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-port.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-string.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-tuple.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/internal/gtest-type-util.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-death-test.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-message.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-param-test.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-printers.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-spi.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-test-part.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest-typed-test.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest_pred_impl.h"
        "google tests for later use/lib/googletest-master/googletest/include/gtest/gtest_prod.h"
        "google tests for later use/lib/googletest-master/googletest/samples/prime_tables.h"
        "google tests for later use/lib/googletest-master/googletest/samples/sample1.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample1.h"
        "google tests for later use/lib/googletest-master/googletest/samples/sample10_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample1_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample2.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample2.h"
        "google tests for later use/lib/googletest-master/googletest/samples/sample2_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample3-inl.h"
        "google tests for later use/lib/googletest-master/googletest/samples/sample3_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample4.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample4.h"
        "google tests for later use/lib/googletest-master/googletest/samples/sample4_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample5_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample6_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample7_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample8_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/samples/sample9_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-all.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-death-test.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-filepath.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-internal-inl.h"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-port.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-printers.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-test-part.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest-typed-test.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest.cc"
        "google tests for later use/lib/googletest-master/googletest/src/gtest_main.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-death-test_ex_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-death-test_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-filepath_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-linked_ptr_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-listener_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-message_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-options_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-param-test2_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-param-test_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-param-test_test.h"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-port_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-printers_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-test-part_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-tuple_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-typed-test2_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-typed-test_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-typed-test_test.h"
        "google tests for later use/lib/googletest-master/googletest/test/gtest-unittest-api_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_all_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_break_on_failure_unittest_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_catch_exceptions_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_color_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_env_var_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_environment_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_filter_unittest_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_help_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_list_tests_unittest_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_main_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_no_test_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_output_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_pred_impl_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_premature_exit_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_prod_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_repeat_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_shuffle_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_sole_header_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_stress_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_throw_on_failure_ex_test.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_throw_on_failure_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_uninitialized_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_unittest.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_xml_outfile1_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_xml_outfile2_test_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/gtest_xml_output_unittest_.cc"
        "google tests for later use/lib/googletest-master/googletest/test/production.cc"
        "google tests for later use/lib/googletest-master/googletest/test/production.h"
        "google tests for later use/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.cc"
        "google tests for later use/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.h"
        "google tests for later use/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget_test.cc"
        "google tests for later use/test/BoardTests.cpp"
        "google tests for later use/test/BoardTests.h"
        "google tests for later use/test/DefaultLogicTests.cpp"
        "google tests for later use/test/DefaultLogicTests.h"
        "google tests for later use/test/GameFlowTests.cpp"
        "google tests for later use/test/GameFlowTests.h"
        "google tests for later use/test/gtest_main.cpp"
        "google tests for later use/test/SquareTests.cpp"
        "google tests for later use/test/SquareTests.h")

add_executable(ex4___limor ${SOURCE_FILES})